--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,10 +5,10 @@ linters:
   disable-all: true
   enable:
     - gofmt
-    - bodyclose
-    - gosimple
+    # - bodyclose
+    # - gosimple
     - prealloc
-    - unused
+    # - unused
     - errcheck
     - deadcode
     - govet
